# santa_tracker_telegram_bot

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
data/: santa_en.json
src/santa_bot/: main.py  settings.py
src/santa_bot/core/: tracker.py
src/santa_bot/services/: santa_api.py  telegram.py
tests/: santa_location_test.py  test_santa_api.py  test_tracker.py
