[project]
name = "santa-tracker"
version = "0.1.0"
description = "A simple bot to track Santa's location"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "python-telegram-bot>=22.5",
]

[dependency-groups]
dev = [
    "geopy>=2.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-telegram-bot[job-queue]>=22.5",
]
